# bdk-wasm

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  DEVELOPMENT_CYCLE.md  README.md  package-lock.json  package.json  test.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement_request.md
.github/actions/: check-is-release.yml
.github/workflows/: audit.yml  build-lint-test.yml  check-is-release.yml  ci.yml  code_coverage.yml  cont_integration.yml  main.yml  publish-release.yml
examples/browser/: README.md  index.js  package.json
src/: lib.rs  types.rs
src/bitcoin/: descriptor.rs  esplora_client.rs  esplora_mm_wallet.rs  esplora_wallet.rs  metamask_wallet.rs  mod.rs  rpc_wallet.rs  snap_wallet.rs  storage.rs  tx_builder.rs  wallet.rs  wallet_tx.rs
src/storage/: mod.rs  snap_persister.rs
src/types/: address.rs  amount.rs  balance.rs  block.rs  chain.rs  changeset.rs  checkpoint.rs  descriptor.rs  error.rs  fee.rs  input.rs  keychain.rs  mod.rs  network.rs  output.rs  psbt.rs  slip10.rs  slip_10.rs  transaction.rs
src/utils/: descriptor.rs  future.rs  mnemonic.rs  mod.rs  panic_hook.rs
tests/: browser.rs  descriptor.rs  esplora.rs  rpc.rs  utils.rs  wallet.rs  web.rs
tests/node/: jest.config.js  package.json  tsconfig.json
tests/node/integration/: esplora.test.ts  example.test.ts  utilities.test.ts  wallet.test.ts
