[package]
name = "bitcoindevkit"
version = "0.1.1"
repository = "https://github.com/MetaMask/bdk-wasm"
description = "A modern, lightweight, descriptor-based wallet library in WebAssembly for browsers and Node"
keywords = [
    "bitcoin",
    "wallet",
    "descriptor",
    "psbt",
    "wasm",
    "bitcoindevkit",
    "bdk",
    "browser",
    "node",
]
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Bitcoin Developers"]
edition = "2021"
rust-version = "1.73"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
esplora = ["bdk_esplora", "wasm-bindgen-futures"]
debug = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = { version = "0.4.49", optional = true }
anyhow = "1.0.94"
serde = { version = "1.0.216", default-features = false, features = ["derive"] }
js-sys = "0.3.76"
serde-wasm-bindgen = "0.6.5"

# Compatibility to compile to WASM
getrandom = { version = "0.2.15", features = ["js"] }
ring = { version = "0.17.8", features = ["wasm32_unknown_unknown_js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }

# Bitcoin dependencies
bdk_wallet = { version = "1.0.0" }
bdk_esplora = { version = "0.20.1", default-features = false, features = [
    "async-https",
], optional = true }
bitcoin = { version = "0.32.5", default-features = false }
miniscript = "12.3.0"
bdk_core = "0.4.1"

# Debug dependencies
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.49"
web-sys = { version = "0.3.76", features = ["console"] }
bdk_wallet = { version = "1.0.0", features = ["keys-bip39"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
