[package]
name = "bitcoindevkit"
version = "0.1.6"
repository = "https://github.com/MetaMask/bdk-wasm"
description = "A modern, lightweight, descriptor-based wallet library in WebAssembly for browsers and Node"
keywords = [
    "bitcoin",
    "wallet",
    "descriptor",
    "psbt",
    "wasm",
    "bitcoindevkit",
    "bdk",
    "browser",
    "node",
]
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Bitcoin Developers"]
edition = "2021"
rust-version = "1.73"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
esplora = ["bdk_esplora", "wasm-bindgen-futures"]
debug = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = { version = "0.4.50", optional = true }
anyhow = "1.0.97"
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.77"

# Compatibility to compile to WASM
ring = { version = "0.17.14", features = ["wasm32_unknown_unknown_js"] }
gloo-timers = { version = "0.3.0", features = ["futures"] }

# BDK dependencies
bdk_wallet = { version = "1.1.0" }
bdk_esplora = { version = "0.20.1", default-features = false, features = [
    "async-https",
], optional = true }

# Debug dependencies
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.50"
bdk_wallet = { version = "1.1.0", features = ["keys-bip39"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
